Hideous kludge to fix (I hope) some jumpiness in the extended city panel. You will need to change Kissy Wider Menu to use #citypanel instead of #overview, if you run that hack (you should :-).
git-svn-id: http://ecmanaut.googlecode.com/svn/trunk/sites/ikariam.org@624 c5938665-bd24-0410-9958-d597d88377d4

--- a/kronos-utils/kronos.css
+++ b/kronos-utils/kronos.css
@@ -400,7 +400,7 @@ html body div#container div#container2 a.text:hover {
 }
 
 /* city resources table */
-#cityNav #overview {
+#cityNav #citypanel {
   z-index: 1;
   display: none;
   cursor: default;
@@ -410,7 +410,7 @@ html body div#container div#container2 a.text:hover {
   top: 6px;
 }
 
-#cityNav #overview tr td {
+#cityNav #citypanel tr td {
   background: url(/skin/layout/select_citynav.jpg) no-repeat -35px -96px;
   line-height: 24px;
   height: 24px;
@@ -418,91 +418,91 @@ html body div#container div#container2 a.text:hover {
 }
 
 /* current line */
-#cityNav #overview .current td:first-child {
+#cityNav #citypanel .current td:first-child {
   padding-left: 6px;
   background-position: 0px -122px;
 }
-#cityNav #overview .current td {
+#cityNav #citypanel .current td {
   background-position: -35px -122px;
 }
-#cityNav #overview .current td:last-child {
+#cityNav #citypanel .current td:last-child {
   background-position: -125px -122px;;
 }
 
 /* current and first line */
-#cityNav #overview .first.current td:first-child {
+#cityNav #citypanel .first.current td:first-child {
   padding-left: 6px;
   background-position: 0px -172px;
 }
-#cityNav #overview .first.current td {
+#cityNav #citypanel .first.current td {
   background-position: -35px -172px;
 }
-#cityNav #overview .first.current td:last-child {
+#cityNav #citypanel .first.current td:last-child {
   background-position: -125px -172px;
 }
 
 /* current and last line */
-#cityNav #overview .current:last-child td:first-child {
+#cityNav #citypanel .current:last-child td:first-child {
   padding-left: 6px;
   background-position: 0px -200px;
 }
-#cityNav #overview .current:last-child td {
+#cityNav #citypanel .current:last-child td {
   background-position: -35px -200px;
 }
-#cityNav #overview .current:last-child td:last-child {
+#cityNav #citypanel .current:last-child td:last-child {
   background-position: -125px -200px;
 }
 
 /* first line */
-#cityNav #overview .first td:first-child {
+#cityNav #citypanel .first td:first-child {
   padding-top: 2px;
   background-position: 0px -72px;
 }
-#cityNav #overview .first td {
+#cityNav #citypanel .first td {
   padding-top: 2px;
   background-position: -35px -72px;
 }
-#cityNav #overview .first td:last-child {
+#cityNav #citypanel .first td:last-child {
   padding-top: 2px;
   background-position: -125px -72px;
 }
 
 /* last line*/
-#cityNav #overview tr:last-child td:first-child {
+#cityNav #citypanel tr:last-child td:first-child {
   padding-bottom: 2px;
   background-position: 0px -146px;
 }
-#cityNav #overview tr:last-child td {
+#cityNav #citypanel tr:last-child td {
   padding-bottom: 2px;
   background-position: -35px -146px;
 }
-#cityNav #overview tr:last-child td:last-child {
+#cityNav #citypanel tr:last-child td:last-child {
   padding-bottom: 2px;
   background-position: -125px -146px;
 }
 
 /* common */
-#cityNav #overview tr td:first-child {
+#cityNav #citypanel tr td:first-child {
   background-position: 0px -98px;
 }
-#cityNav #overview tr td {
+#cityNav #citypanel tr td {
   background-position: -35px -98px;
 }
-#cityNav #overview tr td:last-child {
+#cityNav #citypanel tr td:last-child {
   background-position: -125px -98px;
 }
 
-#cityNav #overview tr:first-child th.building {
+#cityNav #citypanel tr:first-child th.building {
   position: relative;
   text-align: center;
-  min-width: 27px;
+  min-width: 27px; /* also adjust "td.building a" below, if changed */
 }
 
-#cityNav #overview tr:first-child th.building img {
+#cityNav #citypanel tr:first-child th.building img {
   margin-top: 2px;
 }
 
-#cityNav #overview tr:first-child th.building.wall img {
+#cityNav #citypanel tr:first-child th.building.wall img {
   clip: rect(4px, 37px, 23px, 16px);
   position: absolute;
   margin-left: -26px;
@@ -510,46 +510,56 @@ html body div#container div#container2 a.text:hover {
 }
 
 /* Show building levels larger, hover extra jumbo large */
-#cityNav #overview tr td.building a {       font-size: 16px; }
-#cityNav #overview tr td.building a:hover { font-size: 22px; }
+#cityNav #citypanel tr td.building a {       font-size: 16px; width: 27px; }
+#cityNav #citypanel tr td.building a:hover { font-size: 22px; }
 
-#cityNav #overview tr:first-child th {
+#cityNav #citypanel tr:first-child th {
   background-position: center center;
   background-repeat: no-repeat;
-  min-width: 44px;
+  min-width: 45px;
   height: 24px;
   top: 2px;
 }
 
-#cityNav #overview tr:first-child th.p {
+#cityNav #citypanel tr td   {
+  position: relative;
+}
+#cityNav #citypanel tr td * {
+  position: absolute;
+  margin-top: -12px;
+  z-index: 100;
+  width: 45px; /* same as above min-width */
+}
+
+#cityNav #citypanel tr:first-child th.p {
   background-image: url(/skin/resources/icon_citizen.gif);
 }
-#cityNav #overview tr:first-child th.w {
+#cityNav #citypanel tr:first-child th.w {
   background-image: url(/skin/resources/icon_wood.gif);
 }
-#cityNav #overview tr:first-child th.W {
+#cityNav #citypanel tr:first-child th.W {
   background-image: url(/skin/resources/icon_wine.gif);
 }
-#cityNav #overview tr:first-child th.M {
+#cityNav #citypanel tr:first-child th.M {
   background-image: url(/skin/resources/icon_marble.gif);
 }
-#cityNav #overview tr:first-child th.C {
+#cityNav #citypanel tr:first-child th.C {
   background-image: url(/skin/resources/icon_glass.gif);
 }
-#cityNav #overview tr:first-child th.S {
+#cityNav #citypanel tr:first-child th.S {
   background-image: url(/skin/resources/icon_sulfur.gif);
 }
 
-#cityNav #overview tr td:first-child {
+#cityNav #citypanel tr td:first-child {
   padding-left: 6px;
 }
 
-#cityNav #overview tr td:last-child {
+#cityNav #citypanel tr td:last-child {
   padding-right: 6px;
   min-width: 27px;
 }
 
-#cityNav .citySelect #overview {
+#cityNav .citySelect #citypanel {
   z-index: 1;
   /*display: none;*/
   left: 189px;
@@ -558,7 +568,7 @@ html body div#container div#container2 a.text:hover {
 }
 
 /* current building is being upgraded */
-#cityNav #overview a.being-upgraded {
+#cityNav #citypanel a.being-upgraded {
   font-weight: bold;
 }
 
